--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "react-login-page",
+  "name": "react-app-for-ui-tests",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-router-dom": "6.3.0",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start"
@@ -14,6 +13,5 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-  }
+  "browserslist": {}
 }
